test/functions/intents/in/issue-16576-example.good
issue-16576-example.chpl:13: error: unresolved call 'f(1)'
issue-16576-example.chpl:11: note: this candidate did not match: f(in arg: R)
issue-16576-example.chpl:13: note: because actual argument #1 with type 'int(64)'
issue-16576-example.chpl:11: note: is passed to formal 'in arg: R'
